--- a/csm-app/src/app/share/component/header/header.component.html
+++ b/csm-app/src/app/share/component/header/header.component.html
@@ -19,13 +19,13 @@
           <a class="nav-link waves-light"  routerLink="/live-wallpaper"mdbWavesEffect>Live Wallpaper</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link waves-light"  routerLink="/upload-charging"mdbWavesEffect>Upload Charging</a>
+          <a class="nav-link waves-light"  routerLink="/upload/upload-charging"mdbWavesEffect>Upload Charging</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link waves-light"  routerLink="/upload-static"mdbWavesEffect>Upload Static Wallpaper</a>
+          <a class="nav-link waves-light"  routerLink="/upload/upload-static"mdbWavesEffect>Upload Static Wallpaper</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link waves-light"  routerLink="/upload-live"mdbWavesEffect>Upload Live Wallpaper</a>
+          <a class="nav-link waves-light"  routerLink="/upload/upload-live"mdbWavesEffect>Upload Live Wallpaper</a>
         </li>
         <li class="nav-item">
           <a class="nav-link waves-light"  routerLink="/user"mdbWavesEffect>User</a>
