--- a/csm-app/src/styles.css
+++ b/csm-app/src/styles.css
@@ -1,2 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~bootstrap/dist/css/bootstrap.min.css';
+
+.margin-right-8{
+  margin-right: 8px;
+}
+.margin-left-8{
+  margin-left: 8px;
+}
+.margin-top-8{
+  margin-top: 8px;
+}
+.margin-bottom-8{
+  margin-bottom: 8px;
+}
