--- a/csm-app/src/app/component/upload/upload-static/upload-static.component.html
+++ b/csm-app/src/app/component/upload/upload-static/upload-static.component.html
@@ -1,6 +1,17 @@
-<div class="upload-container">
-  <div class="title">
-    Upload static Wallpaper
+<div class="file-type-container">
+  <span class="margin-right-8">Loại file</span>
+  <div class="form-check form-check-inline">
+    <input
+      mdbRadio
+      class="form-check-input"
+      type="radio"
+      name="inlineRadioOptions"
+      id="inlineRadio3"
+      value="option3"
+    />
+    <label class="form-check-label" for="inlineRadio3">image</label>
   </div>
-  <input type="file" name="filename" id="fileId">
+</div>
+<div class="upload-container">
+  <input type="file" name="filename" id="fileId" />
 </div>
