--- a/csm-app/src/app/component/upload/upload-live/upload-live.component.html
+++ b/csm-app/src/app/component/upload/upload-live/upload-live.component.html
@@ -1,6 +1,28 @@
-<div class="upload-container">
-  <div class="title">
-    Upload live Wallpaper
+<div class="file-type-container">
+  <span class="margin-right-8">Loại file</span>
+  <div class="form-check form-check-inline">
+    <input
+      mdbRadio
+      class="form-check-input"
+      type="radio"
+      name="inlineRadioOptions"
+      id="inlineRadio1"
+      value="option1"
+    />
+    <label class="form-check-label" for="inlineRadio1">mp4</label>
   </div>
-  <input type="file" name="filename" id="fileId">
+  <div class="form-check form-check-inline">
+    <input
+      mdbRadio
+      class="form-check-input"
+      type="radio"
+      name="inlineRadioOptions"
+      id="inlineRadio3"
+      value="option3"
+    />
+    <label class="form-check-label" for="inlineRadio3">image</label>
+  </div>
+</div>
+<div class="upload-container">
+  <input type="file" name="filename" id="fileId" />
 </div>
