--- a/csm-app/src/app/component/upload/upload.component.html
+++ b/csm-app/src/app/component/upload/upload.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div class="container-upload-main">
   <div class="file-category">
     <span class="margin-right-8">Loại nhóm</span>
@@ -6,43 +7,6 @@
       <option value="2">catgory 2</option>
       <option value="3">catgory 3</option>
     </select>
-  </div>
-  
-  <div class="file-type-container">
-    <span class="margin-right-8">Loại file</span>
-    <div class="form-check form-check-inline">
-      <input
-        mdbRadio
-        class="form-check-input"
-        type="radio"
-        name="inlineRadioOptions"
-        id="inlineRadio1"
-        value="option1"
-      />
-      <label class="form-check-label" for="inlineRadio1">mp4</label>
-    </div>
-    <div class="form-check form-check-inline">
-      <input
-        mdbRadio
-        class="form-check-input"
-        type="radio"
-        name="inlineRadioOptions"
-        id="inlineRadio2"
-        value="option2"
-      />
-      <label class="form-check-label" for="inlineRadio2">mp3</label>
-    </div>
-    <div class="form-check form-check-inline">
-      <input
-        mdbRadio
-        class="form-check-input"
-        type="radio"
-        name="inlineRadioOptions"
-        id="inlineRadio3"
-        value="option3"
-      />
-      <label class="form-check-label" for="inlineRadio3">image</label>
-    </div>
   </div>
   
   <div class="upload-section">
