--- a/csm-app/src/app/component/user/user.component.html
+++ b/csm-app/src/app/component/user/user.component.html
@@ -1,4 +1,4 @@
-123123
+<app-header></app-header>
 <div class="container">
     <div class="row header">
       <div class="col-sm col-header">Họ và tên</div>
