--- a/csm-app/src/app/share/component/header/header.component.html
+++ b/csm-app/src/app/share/component/header/header.component.html
@@ -9,26 +9,26 @@
   
       <!-- Links -->
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link waves-light" routerLink="/charging" mdbWavesEffect>Charging</a>
+        <li class="nav-item">
+          <a class="nav-link waves-light" routerLinkActive="active"  routerLink="/charging" mdbWavesEffect>Charging</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link waves-light"  routerLink="/static-wallpaper"mdbWavesEffect>Static Wallpaper</a>
+          <a class="nav-link waves-light" routerLinkActive="active"  routerLink="/static-wallpaper"mdbWavesEffect>Static Wallpaper</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link waves-light"  routerLink="/live-wallpaper"mdbWavesEffect>Live Wallpaper</a>
+          <a class="nav-link waves-light" routerLinkActive="active" routerLink="/live-wallpaper"mdbWavesEffect>Live Wallpaper</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link waves-light"  routerLink="/upload/upload-charging"mdbWavesEffect>Upload Charging</a>
+          <a class="nav-link waves-light" routerLinkActive="active"  routerLink="/upload/upload-charging"mdbWavesEffect>Upload Charging</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link waves-light"  routerLink="/upload/upload-static"mdbWavesEffect>Upload Static Wallpaper</a>
+          <a class="nav-link waves-light" routerLinkActive="active"  routerLink="/upload/upload-static"mdbWavesEffect>Upload Static Wallpaper</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link waves-light"  routerLink="/upload/upload-live"mdbWavesEffect>Upload Live Wallpaper</a>
+          <a class="nav-link waves-light" routerLinkActive="active"  routerLink="/upload/upload-live"mdbWavesEffect>Upload Live Wallpaper</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link waves-light"  routerLink="/user"mdbWavesEffect>User</a>
+          <a class="nav-link waves-light" routerLinkActive="active" routerLink="/user"mdbWavesEffect>User</a>
         </li>
       </ul>
  
