--- a/csm-app/src/app/component/signup/signup.component.html
+++ b/csm-app/src/app/component/signup/signup.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6">
-            <div class="card">
+            <div class="card-cms">
                 <div class="text-center">
                     <h1>Đăng ký</h1>
                     <h6>Nhập thông tin đăng ký !!</h6>
