--- a/csm-app/src/app/share/component/header/header.component.html
+++ b/csm-app/src/app/share/component/header/header.component.html
@@ -1,6 +1,7 @@
 <!--Navbar-->
 <mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark bg-primary" [containerInside]="false">
 
+
     <!-- Navbar brand -->
     <mdb-navbar-brand><a class="navbar-brand" style="margin-left: 10px;" routerLink="/charging">CSM</a></mdb-navbar-brand>
   
@@ -12,6 +13,9 @@
         <li class="nav-item">
           <a class="nav-link waves-light" routerLinkActive="active"  routerLink="/charging" mdbWavesEffect>Charging</a>
         </li>
+        <li class="nav-item">
+        <a class="nav-link waves-light" routerLinkActive="active" routerLink="/charging-category" mdbWavesEffect>Charging Category</a>
+      </li>
         <li class="nav-item">
           <a class="nav-link waves-light" routerLinkActive="active"  routerLink="/static-wallpaper"mdbWavesEffect>Static Wallpaper</a>
         </li>
