sua grid + routing them sua

--- a/csm-app/src/app/component/charging-list/charging-list.component.html
+++ b/csm-app/src/app/component/charging-list/charging-list.component.html
@@ -5,8 +5,10 @@
     class="ag-theme-alpine"
     [rowData]="data"
     [columnDefs]="columnDefs"
-    [domLayout]="'autoHeight'"
     (gridReady)="onGridReady($event)"
+    [getRowHeight]="getRowHeight"
+    [tooltipShowDelay]="tooltipShowDelay"
+    [tooltipHideDelay]="tooltipHideDelay"
   >
   </ag-grid-angular>
 </div>
