--- a/csm-app/src/app/component/charging-list-category/charging-list-category.component.scss
+++ b/csm-app/src/app/component/charging-list-category/charging-list-category.component.scss
@@ -1,36 +1,3 @@
-:host {
-    .container {
-        margin-top: 28px;
-    }
-
-    .header {
-        font-family: Roboto, Arial, Helvetica, sans-serifsans-serif;
-        font-weight: bold;
-        margin-bottom: 19px;
-        background: #f0f2f4;
-    }
-
-    .col-header {
-        border: 1px solid #eee;
-    }
-
-    .col-body {
-        margin-bottom: 24px;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        border: 1px solid #000000;
-        display:grid;
-        align-items: center;
-    }
-    a{
-        display: inline;
-    }
-    a:hover {
-        overflow: visible;
-        display: inline;
-      }
-      .body-cms{
-        margin-bottom: 100px;
-    }
-}
+.charging-category-container{
+    margin: 32px;
+  }
