--- a/csm-app/src/app/component/login/login.component.html
+++ b/csm-app/src/app/component/login/login.component.html
@@ -11,7 +11,7 @@
                         <div class="mb-3">
                             <label for="email" class="form-label">Email address</label>
                             <input formControlName= 'email' type="email" class="form-control" id="email" aria-describedby="emailHelp">
-                            <div id="emailHelp" class="form-text"></div>
+                            <div id="emailHelp" class="form-text"> {{error}}</div>
                         </div>
                         <div class="mb-3">
                             <label for="password" class="form-label">Password</label>
