--- a/csm-app/src/app/component/charging-list/charging-edit/charging-edit.component.html
+++ b/csm-app/src/app/component/charging-list/charging-edit/charging-edit.component.html
@@ -1,18 +1,18 @@
 <app-header></app-header>
 <div class="container-fluid">
-  <form>
+  <div class="form-charging">
     <div class="form-group">
       <label for="exampleInputEmail1">thumbs</label>
-      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+      <input type="email" class="form-control" placeholder="thumbs">
     </div>
     <div class="form-group">
       <label for="exampleInputPassword1">videos</label>
-      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+      <input type="password" class="form-control" placeholder="videos">
     </div>
     <div class="form-group">
       <label for="exampleInputPassword1">sounds</label>
-      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+      <input type="password" class="form-control" placeholder="sounds">
     </div>
-    <button type="submit" class="btn btn-primary">Lưu</button>
-  </form>
+    <button class="btn btn-primary">Lưu</button>
+  </div>
 </div>
