--- a/csm-app/src/app/share/component/header/header.component.html
+++ b/csm-app/src/app/share/component/header/header.component.html
@@ -17,10 +17,13 @@
         <a class="nav-link waves-light" routerLinkActive="active" routerLink="/charging-category" mdbWavesEffect>Charging Category</a>
       </li>
         <li class="nav-item">
-          <a class="nav-link waves-light" routerLinkActive="active"  routerLink="/static-wallpaper"mdbWavesEffect>Static Wallpaper</a>
+          <a class="nav-link waves-light" routerLinkActive="active" routerLink="/live-wallpaper"mdbWavesEffect>Live Wallpaper</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link waves-light" routerLinkActive="active" routerLink="/live-wallpaper"mdbWavesEffect>Live Wallpaper</a>
+          <a class="nav-link waves-light" routerLinkActive="active" routerLink="/live-category"mdbWavesEffect>Live Wallpaper Category</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link waves-light" routerLinkActive="active"  routerLink="/static-wallpaper"mdbWavesEffect>Static Wallpaper</a>
         </li>
         <li class="nav-item">
           <a class="nav-link waves-light" routerLinkActive="active"  routerLink="/upload/upload-charging"mdbWavesEffect>Upload Charging</a>
