--- a/csm-app/src/app/component/charging-list/charging-edit/charging-edit.component.html
+++ b/csm-app/src/app/component/charging-list/charging-edit/charging-edit.component.html
@@ -1,17 +1,85 @@
 <app-header></app-header>
 <div class="container-fluid">
-  <div class="form-charging">
+  <div class="back-btn" style="margin-top: 16px">
+    <button class="btn btn-secondary" (click)="back()">
+      Quay lại
+    </button>
+  </div>
+  <div class="form-charging">    
     <div class="form-group">
-      <label for="exampleInputEmail1">thumbs</label>
-      <input type="email" class="form-control" placeholder="thumbs">
+      <div class="url-input flex">
+        <div class="label">thumbs</div>
+        <div class="list-input flex">
+          <ng-container *ngFor="let thumb of model.thumbs; let i = index">
+            <div class="flex" style="margin: 0 4px 8px 4px;">
+              <input type="text" class="form-control" placeholder="thumbs" />
+              <button class="btn btn-danger" (click)="deleteThumb(i)">
+                Xoá
+              </button>
+            </div>
+          </ng-container>
+        </div>
+      </div>
+      <div class="btn-section">
+        <button
+          class="btn btn-success"
+          style="margin-right: 8px"
+          (click)="addThumb()"
+        >
+          Thêm
+        </button>
+      </div>
     </div>
+
     <div class="form-group">
-      <label for="exampleInputPassword1">videos</label>
-      <input type="password" class="form-control" placeholder="videos">
+      <div class="url-input flex">
+        <div class="label">videos</div>
+        <div class="list-input flex">
+          <ng-container *ngFor="let video of model.videos; let i = index">
+            <div class="flex" style="margin: 0 4px 8px 4px;">
+              <input type="text" class="form-control" placeholder="videos" />
+              <button class="btn btn-danger" (click)="deleteVideo(i)">
+                Xoá
+              </button>
+            </div>
+          </ng-container>
+        </div>
+      </div>
+      <div class="btn-section">
+        <button
+          class="btn btn-success"
+          style="margin-right: 8px"
+          (click)="addVideo()"
+        >
+          Thêm
+        </button>
+      </div>
     </div>
+
+    
     <div class="form-group">
-      <label for="exampleInputPassword1">sounds</label>
-      <input type="password" class="form-control" placeholder="sounds">
+      <div class="url-input flex">
+        <div class="label">sounds</div>
+        <div class="list-input flex">
+          <ng-container *ngFor="let sound of model.sounds; let i = index">
+            <div class="flex" style="margin: 0 4px 8px 4px;">
+              <input type="text" class="form-control" placeholder="sounds" />
+              <button class="btn btn-danger" (click)="deleteSound(i)">
+                Xoá
+              </button>
+            </div>
+          </ng-container>
+        </div>
+      </div>
+      <div class="btn-section">
+        <button
+          class="btn btn-success"
+          style="margin-right: 8px"
+          (click)="addSound()"
+        >
+          Thêm
+        </button>
+      </div>
     </div>
     <button class="btn btn-primary">Lưu</button>
   </div>
