--- a/csm-app/src/app/component/charging-list/charging-edit/charging-edit.component.scss
+++ b/csm-app/src/app/component/charging-list/charging-edit/charging-edit.component.scss
@@ -2,4 +2,20 @@
   .form-charging{
     margin-top: 32px;
   }
+  .form-group{
+    display: flex;
+    flex-direction: row;
+  }
+  .label{
+    margin-right: 16px;
+    width: 128px;
+
+  }
+  .form-control{
+    width: 100vh;
+    margin-right: 16px;
+  }
+  .list-input{
+    flex-direction: column;
+  }
 }
