--- a/csm-app/src/app/component/live-wallpaper-list-category/live-wallpaper-list-category.component.html
+++ b/csm-app/src/app/component/live-wallpaper-list-category/live-wallpaper-list-category.component.html
@@ -1,14 +1,29 @@
 <app-header></app-header> 
-<div class="charging-category-container">
+<div class="live-category-container">
+
+  <h2 class="title-grid">Danh sách</h2>
+  <div class="add-chargin">
+    <button (click)="router.navigate(['charging-add'], { relativeTo: route })" class="btn btn-success" style="margin-bottom: 8px">Thêm</button>
+    <button class="btn btn-success" style="margin: 0 0 8px 8px" (click)="export()">Xuất khẩu</button>
+  </div>
+  
   <ag-grid-angular
-    style="width: 100%; height: calc(100vh - 120px)"
+    style="width: 100%; height: calc(100vh - 216px)"
     class="ag-theme-alpine"
     [rowData]="data"
     [columnDefs]="columnDefs"
     (gridReady)="onGridReady($event)"
     [getRowHeight]="getRowHeight"
     [tooltipShowDelay]="tooltipShowDelay"
-    [tooltipHideDelay]="tooltipHideDelay"
+    [defaultColDef]="defaultColumnDef"
   >
   </ag-grid-angular>
 </div>
+
+<ng-template #template>
+  <div class="modal-body text-center">
+    <p>Bạn chắc chắn muốn xoá?</p>
+    <button type="button" class="btn btn-secondary" (click)="confirm()" style="margin-right: 8px">Có</button>
+    <button type="button" class="btn btn-primary" (click)="decline()" >Không</button>
+  </div>
+</ng-template>
