--- a/csm-app/src/app/component/charging-list/charging-list.component.html
+++ b/csm-app/src/app/component/charging-list/charging-list.component.html
@@ -14,6 +14,7 @@
     [getRowHeight]="getRowHeight"
     [tooltipShowDelay]="tooltipShowDelay"
     [defaultColDef]="defaultColumnDef"
+    [enableCellTextSelection]="true"
   >
   </ag-grid-angular>
 </div>
