--- a/csm-app/src/app/component/upload/upload-live/upload-live.component.scss
+++ b/csm-app/src/app/component/upload/upload-live/upload-live.component.scss
@@ -1,20 +1,24 @@
 .file-type-container {
   display: flex;
+  flex-direction: column;
 }
 .form-check {
   display: block;
   min-height: 1.6rem;
   padding-left: 1.5em;
   margin-bottom: 0.125rem;
-}
+} 
 .form-check-inline {
   display: inline-block;
   margin-right: 1rem;
+  width: 90px;
 }
-.form-check-input[type="radio"] {
-  border-radius: 50%;
+.form-check-input[type="checkbox"] {
   width: 1.25rem;
   height: 1.25rem;
   margin-top: 0.125em;
   margin-right: 6px;
+}
+.file-type-group {
+  margin: 8px 0;
 }
