--- a/csm-app/src/app/component/upload/upload-static/upload-static.component.html
+++ b/csm-app/src/app/component/upload/upload-static/upload-static.component.html
@@ -1,17 +1,19 @@
+<span class="margin-right-8">Loại file</span>
 <div class="file-type-container">
-  <span class="margin-right-8">Loại file</span>
-  <div class="form-check form-check-inline">
-    <input
-      mdbRadio
-      class="form-check-input"
-      type="radio"
-      name="inlineRadioOptions"
-      id="inlineRadio3"
-      value="option3"
-    />
-    <label class="form-check-label" for="inlineRadio3">image</label>
+  <div class="file-type-group">
+    <div class="form-check form-check-inline">
+      <input
+        mdbRadio
+        class="form-check-input"
+        type="checkbox"
+        name="inlineRadioOptions"
+        id="inlineRadio3"
+        value="option3"
+      />
+      <label class="form-check-label" for="inlineRadio3">image</label>
+    </div>
+    <span class="upload-container">
+      <input type="file" name="filename" id="fileId" />
+    </span>
   </div>
-</div>
-<div class="upload-container">
-  <input type="file" name="filename" id="fileId" />
 </div>
