--- a/csm-app/src/app/component/live-wallpaper-list/live-wallpaper-list.component.html
+++ b/csm-app/src/app/component/live-wallpaper-list/live-wallpaper-list.component.html
@@ -3,7 +3,7 @@
 
   <h2 class="title-grid">Danh sách</h2>
   <div class="add-chargin">
-    <button (click)="router.navigate(['charging-add'], { relativeTo: route })" class="btn btn-success" style="margin-bottom: 8px">Thêm</button>
+    <button (click)="router.navigate(['live-add'], { relativeTo: route })" class="btn btn-success" style="margin-bottom: 8px">Thêm</button>
     <button class="btn btn-success" style="margin: 0 0 8px 8px" (click)="export()">Xuất khẩu</button>
   </div>
   
