--- a/csm-app/src/app/component/live-wallpaper-list-category/live-category-edit/live-category-edit.component.html
+++ b/csm-app/src/app/component/live-wallpaper-list-category/live-category-edit/live-category-edit.component.html
@@ -1,1 +1,73 @@
-<p>live-category-edit works!</p>
+<app-header></app-header>
+<div class="container-fluid">
+  <div class="back-btn" style="margin-top: 16px">
+    <button class="btn btn-secondary" (click)="back()">
+      Quay lại
+    </button>
+  </div>
+  <div class="form-charging">    
+    <div class="form-group">
+      <div class="url-input flex">
+        <div class="label">Links</div>
+        <div class="list-input flex">
+          <ng-container *ngFor="let link of model.links; let i = index">
+            <div class="flex" style="margin: 0 4px 8px 4px;">
+              <input type="text" class="form-control" placeholder="links" />
+              <button class="btn btn-danger" (click)="deleteLinks(i)">
+                Xoá
+              </button>
+            </div>
+          </ng-container>
+        </div>
+      </div>
+      <div class="btn-section">
+        <button
+          class="btn btn-success"
+          style="margin-right: 8px"
+          (click)="addLinks()"
+        >
+          Thêm
+        </button>
+      </div>
+    </div>
+
+    
+    <div class="form-group">
+      <div class="url-input flex">
+        <div class="label">Icon</div>
+        <div class="list-input flex">
+          <ng-container *ngFor="let sound of model.icon; let i = index">
+            <div class="flex" style="margin: 0 4px 8px 4px;">
+              <input type="text" class="form-control" placeholder="icon" />
+              <button class="btn btn-danger" (click)="deleteIcon(i)">
+                Xoá
+              </button>
+            </div>
+          </ng-container>
+        </div>
+      </div>
+      <div class="btn-section">
+        <button
+          class="btn btn-success"
+          style="margin-right: 8px"
+          (click)="addIcon()"
+        >
+          Thêm
+        </button>
+      </div>
+    </div>
+    <div class="form-group">
+        <div class="url-input flex">
+          <div class="label">Name</div>
+          <div class="list-input flex">
+            <ng-container>
+              <div class="flex" style="margin: 0 4px 8px 4px;">
+                <input type="text" class="form-control" placeholder="name" />
+              </div>
+            </ng-container>
+          </div>
+        </div>
+      </div>
+    <button class="btn btn-primary">Lưu</button>
+  </div>
+</div>
