--- a/csm-app/src/app/component/live-wallpaper-list/live-edit/live-edit.component.html
+++ b/csm-app/src/app/component/live-wallpaper-list/live-edit/live-edit.component.html
@@ -1,1 +1,92 @@
-<p>live-edit works!</p>
+<app-header></app-header>
+<div class="container-fluid">
+    <div class="back-btn" style="margin-top: 16px">
+        <button class="btn btn-secondary" (click)="back()">
+            Quay lại
+        </button>
+    </div>
+    <div class="form-charging">
+        <div class="form-group">
+            <div class="url-input flex">
+                <div class="label">Videos</div>
+                <div class="list-input flex">
+                    <ng-container *ngFor="let thumb of model.videos let i = index">
+                        <div class="flex" style="margin: 0 4px 8px 4px;">
+                            <input type="text" class="form-control" placeholder="videos" />
+                            <button class="btn btn-danger" (click)="deleteVideo(i)">
+                                Xoá
+                            </button>
+                        </div>
+                    </ng-container>
+                </div>
+            </div>
+            <div class="btn-section">
+                <button class="btn btn-success" style="margin-right: 8px" (click)="addVideo()">
+                    Thêm
+                </button>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="url-input flex">
+                <div class="label">Thumbs</div>
+                <div class="list-input flex">
+                    <ng-container *ngFor="let thumb of model.thumbs; let i = index">
+                        <div class="flex" style="margin: 0 4px 8px 4px;">
+                            <input type="text" class="form-control" placeholder="thumbs" />
+                            <button class="btn btn-danger" (click)="deleteThumb(i)">
+                                Xoá
+                            </button>
+                        </div>
+                    </ng-container>
+                </div>
+            </div>
+            <div class="btn-section">
+                <button class="btn btn-success" style="margin-right: 8px" (click)="addThumb()">
+                    Thêm
+                </button>
+            </div>
+        </div>
+
+
+        <div class="form-group">
+            <div class="url-input flex">
+                <div class="label">IsPremium</div>
+                <div class="list-input flex">
+                    <ng-container>
+                        <div class="flex" style="margin: 0 4px 8px 4px;">
+                            <input type="checkbox" placeholder="isPremium" />
+                        </div>
+                    </ng-container>
+                </div>
+            </div>
+        </div>
+        
+        <div class="form-group">
+            <div class="url-input flex">
+                <div class="label">IsLiveWallpaper</div>
+                <div class="list-input flex">
+                    <ng-container>
+                        <div class="flex" style="margin: 0 4px 8px 4px;">
+                            <input type="checkbox"  placeholder="isLiveWallpaper" />
+                        </div>
+                    </ng-container>
+                </div>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="url-input flex">
+                <div class="label">Priority</div>
+                <div class="list-input flex">
+                    <ng-container>
+                        <div class="flex" style="margin: 0 4px 8px 4px;">
+                            <input type="number" class="form-control" placeholder="priority" />
+                        </div>
+                    </ng-container>
+                </div>
+            </div>
+        </div>
+
+        <button class="btn btn-primary">Lưu</button>
+    </div>
+</div>
