sửa form upload

--- a/csm-app/src/app/component/charging-list/charging-edit/charging-edit.component.html
+++ b/csm-app/src/app/component/charging-list/charging-edit/charging-edit.component.html
@@ -8,7 +8,7 @@
   <div class="form-charging">
     <div class="form-group">
       <div class="url-input flex">
-        <div class="label">thumbs</div>
+        <div class="label">Thumbs</div>
         <div class="list-input flex">
           <ng-container *ngFor="let thumb of model.thumbs; let i = index">
             <div class="flex" style="margin: 0 4px 8px 4px;">
@@ -51,7 +51,7 @@
 
       <div class="form-group">
         <div class="url-input flex">
-          <div class="label">videos</div>
+          <div class="label">Videos</div>
           <div class="list-input flex">
             <ng-container *ngFor="let video of model.videos; let i = index">
               <div class="flex" style="margin: 0 4px 8px 4px;">
@@ -73,7 +73,7 @@
 
       <div class="form-group">
         <div class="url-input flex">
-          <div class="label">sounds</div>
+          <div class="label">Sounds</div>
           <div class="list-input flex">
             <ng-container *ngFor="let sound of model.sounds; let i = index">
               <div class="flex" style="margin: 0 4px 8px 4px;">
