--- a/csm-app/src/app/share/component/header/header.component.html
+++ b/csm-app/src/app/share/component/header/header.component.html
@@ -2,42 +2,49 @@
 <mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark bg-primary" [containerInside]="false">
 
 
-    <!-- Navbar brand -->
-    <mdb-navbar-brand><a class="navbar-brand" style="margin-left: 10px;" routerLink="/charging">CSM</a></mdb-navbar-brand>
-  
-    <!-- Collapsible content -->
-    <links>
-  
-      <!-- Links -->
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link waves-light" routerLinkActive="active"  routerLink="/charging" mdbWavesEffect>Charging</a>
-        </li>
-        <li class="nav-item">
-        <a class="nav-link waves-light" routerLinkActive="active" routerLink="/charging-category" mdbWavesEffect>Charging Category</a>
+  <!-- Navbar brand -->
+  <mdb-navbar-brand><a class="navbar-brand" style="margin-left: 10px;" routerLink="/charging">CSM</a></mdb-navbar-brand>
+
+  <!-- Collapsible content -->
+  <links>
+
+    <!-- Links -->
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link waves-light" routerLinkActive="active" routerLink="/charging" mdbWavesEffect>Charging</a>
       </li>
-        <li class="nav-item">
-          <a class="nav-link waves-light" routerLinkActive="active" routerLink="/live-wallpaper"mdbWavesEffect>Live Wallpaper</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link waves-light" routerLinkActive="active" routerLink="/live-category"mdbWavesEffect>Live Wallpaper Category</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link waves-light" routerLinkActive="active"  routerLink="/static-wallpaper"mdbWavesEffect>Static Wallpaper</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link waves-light" routerLinkActive="active"  routerLink="/upload/upload-charging"mdbWavesEffect>Upload Charging</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link waves-light" routerLinkActive="active"  routerLink="/upload/upload-static"mdbWavesEffect>Upload Static Wallpaper</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link waves-light" routerLinkActive="active"  routerLink="/upload/upload-live"mdbWavesEffect>Upload Live Wallpaper</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link waves-light" routerLinkActive="active" routerLink="/user"mdbWavesEffect>User</a>
-        </li>
-      </ul>
- 
-    </links>
-  </mdb-navbar>
+      <li class="nav-item">
+        <a class="nav-link waves-light" routerLinkActive="active" routerLink="/charging-category"
+          mdbWavesEffect>Charging Category</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link waves-light" routerLinkActive="active" routerLink="/live-wallpaper" mdbWavesEffect>Live
+          Wallpaper</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link waves-light" routerLinkActive="active" routerLink="/live-category" mdbWavesEffect>Live
+          Wallpaper Category</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link waves-light" routerLinkActive="active" routerLink="/static-wallpaper" mdbWavesEffect>Static
+          Wallpaper</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link waves-light" routerLinkActive="active" routerLink="/upload/upload-charging"
+          mdbWavesEffect>Upload Charging</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link waves-light" routerLinkActive="active" routerLink="/upload/upload-live" mdbWavesEffect>Upload
+          Live Wallpaper</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link waves-light" routerLinkActive="active" routerLink="/upload/upload-static"
+          mdbWavesEffect>Upload Static Wallpaper</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link waves-light" routerLinkActive="active" routerLink="/user" mdbWavesEffect>User</a>
+      </li>
+    </ul>
+
+  </links>
+</mdb-navbar>
