--- a/csm-app/src/app/component/upload/upload-live/upload-live.component.html
+++ b/csm-app/src/app/component/upload/upload-live/upload-live.component.html
@@ -1,36 +1,18 @@
-<span class="margin-right-8">Loại file</span>
-<div class="file-type-container">
-  <div class="file-type-group">
-    <div class="form-check form-check-inline">
-      <input
-        mdbRadio
-        class="form-check-input"
-        type="checkbox"
-        name="inlineRadioOptions"
-        id="inlineRadio1"
-        value="option1"
-      />
-      <label class="form-check-label" for="inlineRadio1">mp4</label>
-    </div>
-    <span class="upload-container">
-      <input type="file" name="filename" id="fileId" />
-    </span>
-  </div>
+<div class="mb-3">
+  <label for="formFile" class="form-label">Videos</label>
+  <input class="form-control" type="file" accept="video/mp4" id="videos">
+</div>
 
-  <div class="file-type-group">
-    <div class="form-check form-check-inline">
-      <input
-        mdbRadio
-        class="form-check-input"
-        type="checkbox"
-        name="inlineRadioOptions"
-        id="inlineRadio3"
-        value="option3"
-      />
-      <label class="form-check-label" for="inlineRadio3">image</label>
-    </div>
-    <span class="upload-container">
-      <input type="file" name="filename" id="fileId" />
-    </span>
-  </div>
+<div class="mb-3">
+  <label for="formFile" class="form-label">Thumbs</label>
+  <input class="form-control" type="file" accept="image/*" id="thumbs">
+</div>
+
+<div class="mb-3">
+  <label class="form-label">IsLiveWallpaper</label>
+  <input class="form-control" type="checkbox" id="isLiveWallpaper">
+</div>
+<div class="mb-3">
+  <label class="form-label">IsPremium</label>
+  <input class="form-control" type="text" accept="image/*" id="isPremium">
 </div>
