--- a/csm-app/src/app/component/signup/signup.component.html
+++ b/csm-app/src/app/component/signup/signup.component.html
@@ -14,12 +14,12 @@
                         </div>
                         <div class="mb-3">
                             <label for="email" class="form-label">Địa chỉ Email</label>
-                            <input formControlName = 'email' type="email" class="form-control" id="email" aria-describedby="emailHelp">
+                            <input formControlName = 'email' type="text" class="form-control" id="email" aria-describedby="emailHelp">
                             <div id="emailHelp" class="form-text"></div>
                         </div>
                         <div class="mb-3">
                             <label for="phoneNumber" class="form-label">Số điện thoại</label>
-                            <input formControlName = 'phoneNumber' type="number" class="form-control" id="phoneNumber">
+                            <input formControlName = 'phoneNumber' type="text" class="form-control" id="phoneNumber">
                         </div>
                         <div class="mb-3">
                             <label for="password" class="form-label">Mật khẩu</label>
