them model + service

--- a/csm-app/src/app/component/charging-list/charging-edit/charging-edit.component.html
+++ b/csm-app/src/app/component/charging-list/charging-edit/charging-edit.component.html
@@ -118,6 +118,6 @@
         </div>
       </div>
 
-      <button class="btn btn-primary">Lưu</button>
+      <button class="btn btn-primary" (click)="saveData()">Lưu</button>
     </div>
   </div>
