--- a/csm-app/src/app/share/component/header/header.component.html
+++ b/csm-app/src/app/share/component/header/header.component.html
@@ -3,7 +3,7 @@
 
 
   <!-- Navbar brand -->
-  <mdb-navbar-brand><a class="navbar-brand" style="margin-left: 10px;" routerLink="/charging">CSM</a></mdb-navbar-brand>
+  <mdb-navbar-brand><a class="navbar-brand" style="margin-left: 10px;" routerLink="/charging-category">CSM</a></mdb-navbar-brand>
 
   <!-- Collapsible content -->
   <links>
@@ -11,15 +11,8 @@
     <!-- Links -->
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link waves-light" routerLinkActive="active" routerLink="/charging" mdbWavesEffect>Charging</a>
-      </li>
-      <li class="nav-item">
         <a class="nav-link waves-light" routerLinkActive="active" routerLink="/charging-category"
           mdbWavesEffect>Charging Category</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link waves-light" routerLinkActive="active" routerLink="/live-wallpaper" mdbWavesEffect>Live
-          Wallpaper</a>
       </li>
       <li class="nav-item">
         <a class="nav-link waves-light" routerLinkActive="active" routerLink="/live-category" mdbWavesEffect>Live
