--- a/csm-app/src/app/component/upload/upload-live/upload-live.component.html
+++ b/csm-app/src/app/component/upload/upload-live/upload-live.component.html
@@ -1,3 +1,13 @@
+
+<div class="file-category">
+  <span class="margin-right-8">Loại nhóm</span>
+  <select >
+    <option value="1">catgory 1</option>
+    <option value="2">catgory 2</option>
+    <option value="3">catgory 3</option>
+  </select>
+</div>
+
 <div class="mb-3">
   <label for="formFile" class="form-label">Videos</label>
   <input class="form-control" type="file" accept="video/mp4" id="videos">
