--- a/csm-app/src/app/component/charging-list/charging-list.component.html
+++ b/csm-app/src/app/component/charging-list/charging-list.component.html
@@ -2,7 +2,7 @@
 <div class="list-charging-container">
   <h2 class="title-grid">Danh sách</h2>
   <div class="add-chargin">
-    <button (click)="router.navigate(['charging-add'], { relativeTo: route })" class="btn btn-success" style="margin-bottom: 8px">Thêm</button>
+    <button class="btn btn-secondary" (click)="back()" style="margin-bottom: 8px">Quay lại</button>
     <button class="btn btn-success" style="margin: 0 0 8px 8px" (click)="export()">Xuất khẩu</button>
   </div>
   <ag-grid-angular
