--- a/csm-app/src/app/component/charging-list/custom-tooltip/custom-tooltip.component.scss
+++ b/csm-app/src/app/component/charging-list/custom-tooltip/custom-tooltip.component.scss
@@ -6,6 +6,7 @@
   .custom-tooltip{
     display: flex;
     flex-direction: row;
+    background-color: white;
   }
   .image-tooltip, .video-tooltip{
     margin: 0 8px;
