--- a/csm-app/src/app/component/live-wallpaper-list-category/live-wallpaper-list-category.component.html
+++ b/csm-app/src/app/component/live-wallpaper-list-category/live-wallpaper-list-category.component.html
@@ -16,6 +16,7 @@
     [getRowHeight]="getRowHeight"
     [tooltipShowDelay]="tooltipShowDelay"
     [defaultColDef]="defaultColumnDef"
+    [enableCellTextSelection]="true"
   >
   </ag-grid-angular>
 </div>
