--- a/csm-app/src/app/component/charging-list/charging-edit/charging-edit.component.html
+++ b/csm-app/src/app/component/charging-list/charging-edit/charging-edit.component.html
@@ -6,13 +6,14 @@
     </button>
   </div>
   <div class="form-charging">
+    <app-loading [loader]="isLoading"></app-loading>
     <div class="form-group">
       <div class="url-input flex">
         <div class="label">Thumbs</div>
         <div class="list-input flex">
           <ng-container *ngFor="let thumb of model.thumbs; let i = index">
             <div class="flex" style="margin: 0 4px 8px 4px;">
-              <input type="text" class="form-control" placeholder="thumbs" />
+              <input type="text" class="form-control" [value]="thumb" placeholder="thumbs" (input)="changethumbs($event, thumb, i)" />
               <button class="btn btn-danger" (click)="deleteThumb(i)">
                 Xoá
               </button>
@@ -34,7 +35,7 @@
           <div class="list-input flex">
             <ng-container *ngFor="let thumb of model.thumbvideos; let i = index">
               <div class="flex" style="margin: 0 4px 8px 4px;">
-                <input type="text" class="form-control" placeholder="thumb videos" />
+                <input type="text" class="form-control" [value]="thumb" placeholder="thumb videos" (input)="changethumbvideos($event, thumb, i)"  />
                 <button class="btn btn-danger" (click)="deleteThumbvideos(i)">
                   Xoá
                 </button>
@@ -43,7 +44,7 @@
           </div>
         </div>
         <div class="btn-section">
-          <button class="btn btn-success" style="margin-right: 8px" (click)="addhumbvideos()">
+          <button class="btn btn-success" style="margin-right: 8px" (click)="addThumbvideos()">
             Thêm
           </button>
         </div>
@@ -55,7 +56,7 @@
           <div class="list-input flex">
             <ng-container *ngFor="let video of model.videos; let i = index">
               <div class="flex" style="margin: 0 4px 8px 4px;">
-                <input type="text" class="form-control" placeholder="videos" />
+                <input type="text" class="form-control" [value]="video" placeholder="videos" (input)="changevideos($event, video, i)"  />
                 <button class="btn btn-danger" (click)="deleteVideo(i)">
                   Xoá
                 </button>
@@ -77,7 +78,7 @@
           <div class="list-input flex">
             <ng-container *ngFor="let sound of model.sounds; let i = index">
               <div class="flex" style="margin: 0 4px 8px 4px;">
-                <input type="text" class="form-control" placeholder="sounds" />
+                <input type="text" class="form-control" [value]="sound" placeholder="sounds" (input)="changesounds($event, sound, i)"  />
                 <button class="btn btn-danger" (click)="deleteSound(i)">
                   Xoá
                 </button>
